fix to present songs inside a listView

--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -33,7 +33,7 @@
             android:layout_toEndOf="@+id/imgsong"
             android:padding="6dp"
             android:textColor="#FFF"
-            android:text="Song Name"
+            android:text="@string/song_name"
             android:textSize="15sp"
             android:singleLine="true"
             android:marqueeRepeatLimit="marquee_forever"
