--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,14 +7,12 @@
     tools:context=".MainActivity">
 
     <ListView
+        android:id="@+id/listViewSong"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listViewSong"
         android:divider="@android:color/transparent"
         android:dividerHeight="10.0sp"
-        android:padding="8dp">
-    </ListView>
+        android:padding="8dp" />
 
-    
 
 </RelativeLayout>
