--- a/app/src/main/res/layout/activity_player.xml
+++ b/app/src/main/res/layout/activity_player.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,27 +14,27 @@
         android:layout_weight="7"
         android:gravity="center"
         android:orientation="vertical">
+
         <TextView
             android:id="@+id/txtsn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:ellipsize="marquee"
             android:marqueeRepeatLimit="marquee_forever"
             android:padding="10dp"
             android:singleLine="true"
             android:text="@string/song_name"
+            android:textAlignment="center"
             android:textColor="#FFF"
             android:textSize="22sp"
-            android:textAlignment="center"
-            android:textStyle="italic"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-        </TextView>
+            android:textStyle="italic"></TextView>
 
         <ImageView
             android:id="@+id/imageview"
-            android:layout_marginBottom="8dp"
             android:layout_width="250dp"
             android:layout_height="250dp"
+            android:layout_marginBottom="8dp"
             android:src="@drawable/music">
 
         </ImageView>
@@ -43,40 +42,39 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="60dp">
+
             <SeekBar
                 android:id="@+id/seekbar"
-                android:layout_centerInParent="true"
-                android:layout_alignParentBottom="true"
-                android:layout_margin="20dp"
-                android:layout_marginBottom="40dp"
                 android:layout_width="250dp"
-                android:layout_height="wrap_content">
-            </SeekBar>
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_centerInParent="true"
+                android:layout_margin="20dp"
+                android:layout_marginBottom="40dp"></SeekBar>
+
             <TextView
                 android:id="@+id/txtsstart"
-                android:layout_toLeftOf="@+id/seekbar"
-                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentLeft="false"
+                android:layout_centerInParent="true"
                 android:layout_marginLeft="20dp"
+                android:layout_toLeftOf="@+id/seekbar"
                 android:text="@string/_0_10"
                 android:textColor="#FFF"
-                android:textSize="14sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
+                android:textSize="14sp"></TextView>
 
             <TextView
                 android:id="@+id/txtsstop"
-                android:layout_toRightOf="@+id/seekbar"
-                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_alignParentRight="false"
+                android:layout_centerInParent="true"
                 android:layout_marginRight="20dp"
+                android:layout_toRightOf="@+id/seekbar"
                 android:text="@string/_4_10"
                 android:textColor="#FFF"
-                android:textSize="14sp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content">
-            </TextView>
+                android:textSize="14sp"></TextView>
 
         </RelativeLayout>
     </LinearLayout>
@@ -89,65 +87,64 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
+
             <Button
                 android:id="@+id/playbtn"
-                android:layout_centerHorizontal="true"
-                android:background="@drawable/ic_pause"
                 android:layout_width="70dp"
-                android:layout_height="70dp">
+                android:layout_height="70dp"
+                android:layout_centerHorizontal="true"
+                android:background="@drawable/ic_pause">
 
             </Button>
+
             <Button
                 android:id="@+id/btnnext"
-                android:layout_toRightOf="@+id/playbtn"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/ic_next"
                 android:layout_width="50dp"
-                android:layout_height="50dp">
-            </Button>
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:layout_toRightOf="@+id/playbtn"
+                android:background="@drawable/ic_next"></Button>
 
             <Button
                 android:id="@+id/btnprev"
-                android:layout_toLeftOf="@+id/playbtn"
-                android:layout_marginTop="15dp"
-                android:background="@drawable/ic_prev"
                 android:layout_width="50dp"
-                android:layout_height="50dp">
-            </Button>
+                android:layout_height="50dp"
+                android:layout_marginTop="15dp"
+                android:layout_toLeftOf="@+id/playbtn"
+                android:background="@drawable/ic_prev"></Button>
 
             <Button
                 android:id="@+id/btnff"
-                android:layout_toRightOf="@+id/btnnext"
-                android:layout_marginTop="20dp"
-                android:layout_marginLeft="15dp"
-                android:background="@drawable/ic_fast_forward"
                 android:layout_width="40dp"
-                android:layout_height="40dp">
+                android:layout_height="40dp"
+                android:layout_marginLeft="15dp"
+                android:layout_marginTop="20dp"
+                android:layout_toRightOf="@+id/btnnext"
+                android:background="@drawable/ic_fast_forward">
 
             </Button>
 
             <Button
                 android:id="@+id/btnfr"
-                android:layout_toLeftOf="@+id/btnprev"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:layout_marginRight="15dp"
-                android:background="@drawable/ic_fast_rewind"
-                android:layout_width="40dp"
-                android:layout_height="40dp">
+                android:layout_toLeftOf="@+id/btnprev"
+                android:background="@drawable/ic_fast_rewind">
 
             </Button>
 
-            <com.gauravk.audiovisualizer.visualizer.BarVisualizer
-                xmlns:custom="http://schemas.android.com/apk/res-auto"
+            <com.gauravk.audiovisualizer.visualizer.BarVisualizer xmlns:custom="http://schemas.android.com/apk/res-auto"
                 android:id="@+id/blast"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_alignParentBottom="true"
-                custom:avDensity="0.5"
-                custom:avType="outline"
-                custom:avWidth="4dp"
                 custom:avColor="#FF362E"
-                custom:avSpeed="normal"/>
+                custom:avDensity="0.5"
+                custom:avSpeed="normal"
+                custom:avType="outline"
+                custom:avWidth="4dp" />
 
         </RelativeLayout>
     </LinearLayout>
